tests/fixtures/invalid/str_notin_bytes.py
# Cannot use 'not in' with Str and Bytes
x: bool = "hello" not in b"hello"
